Add some content to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         <meta name="author" content="Author">
         <title>{% block title %}Readit{% endblock %}</title>
         <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+        <link rel="stylesheet" href="{% static "css/app.css" %}">
     </head>
     <body>
         {% block navbar %}
