--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <title>{% block title %}Readit{% endblock %}</title>
         <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "css/app.css" %}">
+        <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
     </head>
     <body>
         {% block navbar %}
@@ -22,7 +23,8 @@
             {% endblock %}
         </div>
 
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
+        <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+        
         {% block js %}
         {% endblock %}
     </body>
