--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -1,22 +1,39 @@
 {% load static %}
 
-<div class="container-fluid app-navbar p-2">
+<div class="container-fluid app-navbar py-2">
     <div class="row">
         <div class="col-9">
-            <div class="d-flex">
-                <img class="app-logo" src="{% static 'images/logo.png' %}"/>
-                <h3>
+            <div class="d-flex mx-2">
+                <img class="app-logo me-2" src="{% static 'images/logo.png' %}"/>
+                <h4 class="">
                     readit  
-                </h3>
+                </h4>
             </div>
         </div>
-        <div class="col-3">
-            <button class="app-btn sign-up-btn mx-3" type="submit">
+        <div class="col-3 d-flex justify-content-end">
+            <button class="app-btn sign-up-btn mx-2" type="submit">
                 <p>Sign Up<p>
             </button>
             <button class="app-btn log-in-btn" type="submit">
                 <p>Log In<p>
             </button>
+            <div class="btn-group mx-2">
+                <button type="button" class="btn user-menu-btn d-flex justify-content-center" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                    <i class="far fa-user mx-1"></i>
+                    <i class="fas fa-chevron-down"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-lg-end user-dropdown">
+                  <li>
+                    <button class="dropdown-item" type="button">
+                        <i class="far fa-user-circle mx-2"></i>
+                        Sign Up or Log In
+                    </button>
+                  </li>
+                  <li class="mx-4 mt-2 mb-2">
+                    <small class="text-secondary">© 2022 Readit, Inc. All rights reserved</small>
+                  </li>
+                </ul>
+              </div>
         </div>
     </div>
 </div>
