--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -14,8 +14,10 @@
             <button class="app-btn sign-up-btn mx-2" type="submit">
                 <p>Sign Up<p>
             </button>
-            <button class="app-btn log-in-btn" type="submit">
-                <p>Log In<p>
+            <button class="app-btn log-in-btn">
+                <a  data-bs-toggle="modal" data-bs-target="#loginModal">
+                    <p>Log In<p>
+                </a>
             </button>
             <div class="btn-group mx-2">
                 <button type="button" class="btn user-menu-btn d-flex justify-content-center" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
