--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,16 +16,21 @@
 }
 
 .log-in-btn {
-    background-color: #0079d3;
+    background-color: #ff4500;
     color: #ffffff;
-    border: 1px solid #0079d3;
+    border: 1px solid #ff4500;
     font-weight: bold;
     height: 32px;
     width: 120px;
 }
 
 .log-in-btn:hover {
-    background-color: #0089d3;
+    background-color: #db3a00;
+}
+
+.modal-log-in-btn {
+    width: 300px;
+    height: 40px;
 }
 
 .app-logo {
@@ -57,4 +62,28 @@ body {
 .user-dropdown {
     width: 300px !important;
     border: 1px solid #edeff1 !important;
+}
+
+.login-modal {
+    width: 400px;
+}
+
+.modal-dialog {
+    justify-content: center !important;
+}
+
+.login-register-modal-input {
+    height: 45px;
+    border-radius: 25px;
+    background-color: #f6f7f8 !important;
+    border: 1px solid #f6f7f8 !important;
+    border: none;
+}
+
+.login-register-modal-input:focus {
+    box-shadow: none !important;
+}
+
+.login-register-modal-input:hover {
+    border-color: gray !important;
 }
