Add sign up modal

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,12 @@
             {% include 'layout/navbar.html' %}
         {% endblock %}
 
-        {% block login %}
-            {% include 'public/login.html' %}
+        {% block log_in %}
+            {% include 'public/log-in.html' %}
+        {% endblock %}
+
+        {% block sign_up %}
+            {% include 'public/sign-up.html' %}
         {% endblock %}
 
         <div class="container">
