--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -12,10 +12,12 @@
         </div>
         <div class="col-3 d-flex justify-content-end">
             <button class="app-btn sign-up-btn mx-2" type="submit">
-                <p>Sign Up<p>
+                <a data-bs-toggle="modal" data-bs-target="#sign-up-modal">
+                    <p>Sign Up<p>
+                </a>
             </button>
             <button class="app-btn log-in-btn">
-                <a  data-bs-toggle="modal" data-bs-target="#loginModal">
+                <a data-bs-toggle="modal" data-bs-target="#log-in-modal">
                     <p>Log In<p>
                 </a>
             </button>
