--- a/templates/public/log-in.html
+++ b/templates/public/log-in.html
@@ -1,5 +1,5 @@
 
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+<div class="modal fade" id="log-in-modal" tabindex="-1" aria-labelledby="log-in-modal-label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content login-modal">
       <div class="d-flex justify-content-end p-3">
@@ -21,7 +21,7 @@
                   <input type="text" class="form-control login-register-modal-input" id="recipient-name" placeholder="Username">
                 </div>
                 <div class="mb-3">
-                    <input type="text" class="form-control login-register-modal-input" id="recipient-name" placeholder="Password">
+                    <input type="password" class="form-control login-register-modal-input" id="recipient-name" placeholder="Password">
                 </div>
             </form>
             <div>
@@ -36,7 +36,7 @@
             </div>
             <div class="w-100 mt-3">
                 <small>
-                    New to Readit? <a href="#" class="fw-bold">Sign Up</a>
+                    New to Readit? <a href="#" data-bs-toggle="modal" data-bs-target="#sign-up-modal" class="fw-bold">Sign Up</a>
                 </small>
             </div>
           </div>
