Add navigation to login from dropdown menu

--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -29,8 +29,10 @@
                 <ul class="dropdown-menu dropdown-menu-lg-end user-dropdown">
                   <li>
                     <button class="dropdown-item" type="button">
-                        <i class="far fa-user-circle mx-2"></i>
-                        Sign Up or Log In
+                        <a data-bs-toggle="modal" data-bs-target="#log-in-modal">
+                            <i class="far fa-user-circle mx-2"></i>
+                            Sign Up or Log In
+                        </a>
                     </button>
                   </li>
                   <li class="mx-4 mt-2 mb-2">
