--- a/templates/public/sign-up.html
+++ b/templates/public/sign-up.html
@@ -34,7 +34,7 @@
               </div>
               <div class="w-100 mt-3">
                   <small>
-                      Already a readitor? <a href="#" data-bs-toggle="modal" data-bs-target="#login-in-modal" class="fw-bold">Log In</a>
+                      Already a readitor? <a href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal" class="fw-bold">Log In</a>
                   </small>
               </div>
             </div>
