Added submission template and displaying submission on the main page

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,21 @@
         <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "css/app.css" %}">
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
+
+    <style>
+        img{
+            width: 400px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+
+        h6{
+            font-size: 12px;
+        }
+    </style>
+
+
     </head>
     <body>
         {% block navbar %}
