--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -1,9 +1,45 @@
 {% extends 'base.html' %}
+{% load humanize %}
 
 {% block content %}
 
-    <div class='text-center display-1'>
-        readit
+<div class='text-center display-1'>
+    readit
+</div>
+
+<div class="card-columns">
+    {% for submission in submissions %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <div class="card my-3">
+                    <div class="card-header d-flex align-items-center justify-content-between">
+                        <div>
+                            <i class="fas fa-arrow-up"></i>
+                            <span class="badge badge-primary badge-pill text-dark">{{ submission.upvotes }}</span>
+                            <i class="fas fa-arrow-down"></i>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-text">r/{{ submission.subreadit }} :
+                            <span class="card-subtitle mb-2 text-muted">u/{{ submission.author }}</span> :
+                            <span class="card-subtitle mb-2 text-muted">{{ submission.created_at|naturaltime }}</span>
+                        </h6>
+                        <h5 class="card-title">{{ submission.title }}</h5>
+                        <p class="card-text">{{ submission.text }}</p>
+                        <img src="{{ submission.image_url }}" alt="" class="img-fluid">
+                    </div>
+                    <div class="card-footer d-flex align-items-center">
+                        <a href="#" class="btn btn-secondary btn-sm">
+                            <i class="fas fa-comment"></i>
+                            Comments
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
