--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,23 @@
         h6{
             font-size: 12px;
         }
+
+        .upvote-clicked{
+            color: #ff4500;
+        }
+
+        .downvote-clicked{
+            color: #0000ff;
+        }
+
+        .upvote-arrow:hover{
+            color: #ff8b65;
+        }
+
+        .downvote-arrow:hover{
+            color: #7272ff;
+            font-weight: bold;
+        }
     </style>
 
 
