--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -122,6 +122,7 @@
 
         const downvoteArrow = document.querySelector('.downvote-arrow-' + submissionId);
         const upvoteArrow = document.querySelector('.upvote-arrow-' + submissionId);
+        const upvoteCountElement = document.querySelector('.upvote-counter-' + submissionId)
 
         if(downvoteArrow.classList.contains('downvote-clicked')){
             downvoteArrow.classList.remove('downvote-clicked');
@@ -129,10 +130,30 @@
             downvoteArrow.classList.add('downvote-clicked');
         }
 
-        increment = 0;
         if(upvoteArrow.classList.contains('upvote-clicked')){
-            upvoteArrow.classList.remove('upvote-clicked');
-            increment = -1;
+             upvoteArrow.classList.remove('upvote-clicked');
+            fetch('/upvote_unclicked/' + submissionId + '/', {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': csrftoken
+                },
+                body: JSON.stringify({
+                    'submission_id': submissionId
+                })
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.json()
+            })
+            .then(data => {
+                if (data.status === 'success') {
+                    let currentCount = parseInt(upvoteCountElement.textContent)
+                    upvoteCountElement.textContent = `${currentCount - 1}`
+                }
+            })
         }
 
         fetch('/downvote/' + submissionId + '/', {
@@ -146,13 +167,6 @@
             })
         })
         .then(response => response.json())
-        .then(data => {
-            if (data.status === 'success') {
-                const upvoteCountElement = document.querySelector('.upvote-counter-' + submissionId)
-                let currentCount = parseInt(upvoteCountElement.textContent)
-                upvoteCountElement.textContent = `${currentCount + increment}`
-            }
-        })
     }
 </script>
 
