--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load static %}
 
 {% block content %}
 
@@ -7,9 +8,7 @@
     readit
 </div>
 
-<script>
-    let submissionId;
-</script>
+<script src="{% static '/js/votes.js' %}"></script>
 
 <div class="card-columns">
     {% for submission in submissions %}
@@ -51,123 +50,5 @@
         </div>
     {% endfor %}
 </div>
-
-<script>
-    function upvote(submissionId) {
-        event.preventDefault();
-        const csrftoken = document.querySelector("[name='csrfmiddlewaretoken']").value;
-
-        const upvoteArrow = document.querySelector('.upvote-arrow-' + submissionId);
-        const downvoteArrow = document.querySelector('.downvote-arrow-' + submissionId);
-        const upvoteCountElement = document.querySelector('.upvote-counter-' + submissionId)
-
-        if(upvoteArrow.classList.contains('upvote-clicked')){
-            upvoteArrow.classList.remove('upvote-clicked');
-            fetch('/upvote_unclicked/' + submissionId + '/', {
-                method: 'post',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrftoken
-                },
-                body: JSON.stringify({
-                    'submission_id': submissionId
-                })
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json()
-            })
-            .then(data => {
-                if (data.status === 'success') {
-                    let currentCount = parseInt(upvoteCountElement.textContent)
-                    upvoteCountElement.textContent = `${currentCount - 1}`
-                }
-            })
-        }
-        else {
-            upvoteArrow.classList.add('upvote-clicked');
-            fetch('/upvote/' + submissionId + '/', {
-                method: 'post',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrftoken
-                },
-                body: JSON.stringify({
-                    'submission_id': submissionId
-                })
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json()
-            })
-            .then(data => {
-                if (data.status === 'success') {
-                    let currentCount = parseInt(upvoteCountElement.textContent)
-                    upvoteCountElement.textContent = `${currentCount + 1}`
-                }
-            })
-        }
-
-        if(downvoteArrow.classList.contains('downvote-clicked')){
-            downvoteArrow.classList.remove('downvote-clicked');
-        }
-    }
-    function downvote(submissionId) {
-        event.preventDefault();
-        const csrftoken = document.querySelector("[name='csrfmiddlewaretoken']").value;
-
-        const downvoteArrow = document.querySelector('.downvote-arrow-' + submissionId);
-        const upvoteArrow = document.querySelector('.upvote-arrow-' + submissionId);
-        const upvoteCountElement = document.querySelector('.upvote-counter-' + submissionId)
-
-        if(downvoteArrow.classList.contains('downvote-clicked')){
-            downvoteArrow.classList.remove('downvote-clicked');
-        } else {
-            downvoteArrow.classList.add('downvote-clicked');
-        }
-
-        if(upvoteArrow.classList.contains('upvote-clicked')){
-             upvoteArrow.classList.remove('upvote-clicked');
-            fetch('/upvote_unclicked/' + submissionId + '/', {
-                method: 'post',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrftoken
-                },
-                body: JSON.stringify({
-                    'submission_id': submissionId
-                })
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json()
-            })
-            .then(data => {
-                if (data.status === 'success') {
-                    let currentCount = parseInt(upvoteCountElement.textContent)
-                    upvoteCountElement.textContent = `${currentCount - 1}`
-                }
-            })
-        }
-
-        fetch('/downvote/' + submissionId + '/', {
-            method: 'post',
-            headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': csrftoken
-            },
-            body: JSON.stringify({
-                'submission_id': submissionId
-            })
-        })
-        .then(response => response.json())
-    }
-</script>
 
 {% endblock %}
