Changed downvote / upvote buttons color

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,12 +33,11 @@
         }
 
         .upvote-arrow:hover{
-            color: #ff8b65;
+            color: #FF8b60;
         }
 
         .downvote-arrow:hover{
-            color: #7272ff;
-            font-weight: bold;
+            color: #9494FF;
         }
     </style>
 
