Implemented comments section

--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -39,7 +39,7 @@
                             <img src="{{ submission.image_url }}" alt="" class="img-fluid">
                         </div>
                         <div class="card-footer d-flex align-items-center">
-                            <a href="#" class="btn btn-secondary btn-sm">
+                            <a href="/{{ submission.id }}/comments" class="btn btn-secondary btn-sm">
                                 <i class="fas fa-comment"></i>
                                 Comments
                             </a>
