--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -4,9 +4,11 @@
     <div class="row">
         <div class="col-3">
             <div class="d-flex mx-2">
-                <img class="app-logo me-2" src="{% static 'images/logo.png' %}"/>
+                <img class="app-logo me-2" src="{% static 'images/logo.png' %}" alt="logo"/>
                 <h4 class="">
-                    readit  
+                    <a class="text-decoration-none text-dark" href="{% url 'mainpage' %}">
+                        readit
+                    </a>
                 </h4>
             </div>
         </div>
