--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -4,12 +4,12 @@
     <div class="row">
         <div class="col-3">
             <div class="d-flex mx-2">
-                <img class="app-logo me-2" src="{% static 'images/logo.png' %}" alt="logo"/>
-                <h4 class="">
-                    <a class="text-decoration-none text-dark" href="{% url 'mainpage' %}">
-                        readit
-                    </a>
-                </h4>
+                <a class="text-decoration-none text-dark d-flex mx-2" href="{% url 'mainpage' %}">
+                    <img class="app-logo me-2" src="{% static 'images/logo.png' %}" alt="logo"/>
+                    <h4 class="">
+                            readit
+                    </h4>
+               </a>
             </div>
         </div>
         <div class="col-4">
