--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<div class='text-center display-1'>
-    readit
+<div class="d-flex justify-content-center mt-3">
+    <a class="btn btn-primary" href="/submit">Create a Post</a>
 </div>
 
 <script src="{% static '/js/votes.js' %}"></script>
