--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "css/app.css" %}">
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <style>
         img{
@@ -48,8 +49,8 @@
             {% include 'layout/navbar.html' %}
         {% endblock %}
 
-        {% block log_in %}
-            {% include 'public/log-in.html' %}
+        {% block sign_in %}
+            {% include 'public/sign-in.html' %}
         {% endblock %}
 
         {% block sign_up %}
@@ -63,6 +64,7 @@
         </div>
 
         <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+        
         
         {% block js %}
         {% endblock %}
