--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -22,32 +22,62 @@
             </div>
         </div>
         <div class="col-5 d-flex justify-content-end">
-            <button class="app-btn sign-up-btn mx-2" type="submit">
-                <a data-bs-toggle="modal" data-bs-target="#sign-up-modal">
-                    <span>Sign Up</span>
-                </a>
-            </button>
-            <button class="app-btn log-in-btn">
-                <a data-bs-toggle="modal" data-bs-target="#log-in-modal">
-                    <span>Log In</span>
-                </a>
-            </button>
+            {% if request.user.is_authenticated %}
+                <button class="app-btn sign-up-btn sign-out-btn mx-2">Sign out</button>
+                <form id="sign-out-form">{% csrf_token %}</form>
+            {% else %}
+                <button class="app-btn sign-up-btn mx-2" type="submit">
+                    <a data-bs-toggle="modal" data-bs-target="#sign-up-modal">
+                        <span>Sign Up</span>
+                    </a>
+                </button>
+                <button class="app-btn sign-in-btn">
+                    <a data-bs-toggle="modal" data-bs-target="#sign-in-modal">
+                        <span>Sign In</span>
+                    </a>
+                </button>
+            {% endif %}
             <div class="btn-group mx-2">
-                <button type="button" class="btn user-menu-btn d-flex justify-content-center" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                    <i class="far fa-user mx-1"></i>
-                    <i class="fas fa-chevron-down"></i>
+                <button type="button" 
+                    class={% if request.user.is_authenticated %}
+                            "btn user-menu-btn signed-in-user-menu-btn d-flex"
+                          {% else %}
+                            "btn user-menu-btn annonymous-user-menu-btn d-flex"
+                          {% endif %}
+                    data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                    {% if request.user.is_authenticated %}
+                        <div class="d-flex w-100">
+                            <img class="user-avatar-small" src="{{ readit_user.avatar_url }}" />
+                            <div class="me-5">
+                                <p class="username-small ms-1 fw-bold">{{ request.user.username }}</p>
+                                <p class="username-small ms-1">{{ readit_user.karma }} karma</p>
+                            </div>
+                        </div>
+                    {% else %}
+                        <i class="far fa-user mx-1 mt-1"></i>
+                    {% endif %}
+                    <i class="fas fa-chevron-down mt-1 ms-2"></i>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-lg-end user-dropdown">
                   <li>
-                    <button class="dropdown-item" type="button">
-                        <a data-bs-toggle="modal" data-bs-target="#log-in-modal">
-                            <i class="far fa-user-circle mx-2"></i>
-                            Sign Up or Log In
-                        </a>
-                    </button>
+                    {% if request.user.is_authenticated %}
+                        <button class="dropdown-item sign-out-btn" type="button">
+                            <a>
+                                <i class="fas fa-sign-out-alt mx-2"></i>
+                                Sign Out
+                            </a>
+                        </button>
+                    {% else %}
+                        <button class="dropdown-item" type="button">
+                            <a data-bs-toggle="modal" data-bs-target="#sign-in-modal">
+                                <i class="far fa-user-circle mx-2"></i>
+                                Sign Up or Sign In
+                            </a>
+                        </button>
+                    {% endif %}
                   </li>
                   <li class="mx-4 mt-2 mb-2">
-                    <small class="text-secondary">© 2022 Readit, Inc. All rights reserved</small>
+                    <small class="text-secondary">© 2023 Readit, Inc. All rights reserved</small>
                   </li>
                 </ul>
               </div>
