Add sign up functionality

--- a/templates/public/sign-in.html
+++ b/templates/public/sign-in.html
@@ -37,7 +37,7 @@
                     </small>
                 </div>
                 <div>
-                  <p id="sign-in-error-message" class="text-danger" hidden>Error</p>
+                  <p id="sign-in-error-message" class="text-danger" hidden></p>
                 </div>
             </form>
           </div>
