--- a/templates/public/sign-up.html
+++ b/templates/public/sign-up.html
@@ -19,27 +19,32 @@
               </div>
             </div>
             <div class="modal-body">
-              <form>
+              <form id="sign-up-form">
+                  {% csrf_token %}
                   <div class="mb-3">
-                    <input type="text" class="form-control sign-in-up-modal-input" id="recipient-name" placeholder="Email">
+                    <input type="text" class="form-control sign-in-up-modal-input" name="email" placeholder="Email">
                   </div>
                   <div class="mb-3">
-                      <input type="text" class="form-control sign-in-up-modal-input" id="recipient-name" placeholder="Username">
+                      <input type="text" class="form-control sign-in-up-modal-input" name="username" placeholder="Username">
                   </div>
                   <div class="mb-3">
-                    <input type="password" class="form-control sign-in-up-modal-input" id="recipient-name" placeholder="Password">
+                    <input id="sign-up-password" type="password" class="form-control sign-in-up-modal-input" name="password" placeholder="Password">
+                  </div>
+                  <div class="mb-3">
+                    <input id="sign-up-confirm-password" type="password" class="form-control sign-in-up-modal-input" name="confirm-password" placeholder="Confirm password">
+                  </div>
+                <div class="d-flex justify-content-center">
+                  <button id="sign-up-btn" type="button" class="app-btn sign-in-btn modal-sign-in-btn">Sign Up</button>
                 </div>
-              </form>
-            </div>
-            <div class="modal-footer border-0 d-flex justify-content-center mb-4">
-              <div>
-                  <button type="button" class="app-btn sign-in-btn modal-sign-in-btn">Sign In</button>
-              </div>
-              <div class="w-100 mt-3">
+                <div class="w-100 my-3">
                   <small>
                       Already a readitor? <a href="#" data-bs-toggle="modal" data-bs-target="#sign-in-modal" class="fw-bold">Sign In</a>
                   </small>
-              </div>
+                </div>
+                <div>
+                  <p id="sign-up-error-message" class="text-danger" hidden></p>
+                </div>
+              </form>
             </div>
         </div>
       </div>
