--- a/templates/base.html
+++ b/templates/base.html
@@ -8,40 +8,10 @@
         <meta name="description" content="Desc">
         <meta name="author" content="Author">
         <title>{% block title %}Readit{% endblock %}</title>
-        <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+        <link rel="stylesheet" href="{% static "css/libraries/bootstrap/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "css/app.css" %}">
+        <script src="{% static "js/libraries/jQuery/jquery-3.6.3.min.js" %}"></script>
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <style>
-        img{
-            width: 400px;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-
-        h6{
-            font-size: 12px;
-        }
-
-        .upvote-clicked{
-            color: #ff4500;
-        }
-
-        .downvote-clicked{
-            color: #0000ff;
-        }
-
-        .upvote-arrow:hover{
-            color: #FF8b60;
-        }
-
-        .downvote-arrow:hover{
-            color: #9494FF;
-        }
-    </style>
-
 
     </head>
     <body>
@@ -63,8 +33,7 @@
             {% endblock %}
         </div>
 
-        <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
-        
+        <script src="{% static "js/libraries/bootstrap/bootstrap.bundle.min.js" %}"></script>
         
         {% block js %}
         {% endblock %}
