--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
         <title>{% block title %}Readit{% endblock %}</title>
         <link rel="stylesheet" href="{% static "css/libraries/bootstrap/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "css/app.css" %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         <script src="{% static "js/libraries/jQuery/jquery-3.6.3.min.js" %}"></script>
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
-
     </head>
     <body>
         {% block navbar %}
