--- a/submissions/templates/create-submission.html
+++ b/submissions/templates/create-submission.html
@@ -32,6 +32,31 @@
             </div>
         </form>
     </div>
+    <div class="col-3 ms-4">
+      <div class="card create-submission-rules-card border-0 p-3">
+        <div class="d-flex">
+          <img class="app-logo" src="{% static 'images/logo.png' %}" alt="logo"/>
+          <h5 class="mt-1 ms-2">Posting to Readit</h5>
+        </div>
+        <p class="gray-hr mt-1"></p>
+        <p class="mb-2">1. Remember the human</p>
+        <p class="gray-hr"></p>
+        <p class="mb-2">2. Behave like you would in real life</p>
+        <p class="gray-hr"></p>
+        <p class="mb-2">3. Look for the original source of content</p>
+        <p class="gray-hr"></p>
+        <p class="mb-2">4. Search for duplicates before posting</p>
+        <p class="gray-hr"></p>
+        <p class="mb-2">5. Read the community’s rules</p>
+        <p class="gray-hr"></p>
+      </div>
+      <div class="mt-3">
+        <small class="text-secondary fw-bolder">
+          Please be mindful of reddit's <a class="readit-blue-font text-decoration-none" href="#">content policy </a>
+          and practice good <a class="readit-blue-font text-decoration-none" href="#">reddiquette</a>.
+        </small>
+      </div>
+    </div>
 </div>
 
 {% endblock %}
