--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -46,10 +46,16 @@
                             <img src="{{ submission.image_url }}" alt="" class="img-fluid">
                         </div>
                         <div class="card-footer d-flex align-items-center">
-                            <a href="/{{ submission.id }}/comments" class="btn btn-secondary btn-sm">
+                            <a href="/{{ submission.id }}/comments" class="btn btn-secondary btn-sm me-2">
                                 <i class="fas fa-comment"></i>
                                 Comments
                             </a>
+                            {% if submission.author.id == request.user.id %}
+                                <a href="/submit/{{ submission.id }}" class="btn btn-primary btn-sm">
+                                    <i class="far fa-edit"></i>
+                                    Edit
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
